fixed text overflowing on login page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@ body {
     background-color: rgb(179, 155, 179);
 }
 .login-container {
-    width: 25%;
+    width: 45%;
     margin-top: 3.5em;
     text-align: center;
 }
